# tune-tangle

./: .gitignore
backend/apps/lyrics_embedder/: embed.py
backend/apps/lyrics_search/: pyproject.toml  requirements.txt
backend/apps/lyrics_search/lyrics_search/: main.py
backend/apps/lyrics_search/lyrics_search/app/: api.py  core.py  index.py  schemas.py  search.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: Logo.jsx  LyricSearchBar.jsx  QuerySearchBar.jsx  VectorResults.jsx
